--- a/QuickSort/QuickSort.csproj
+++ b/QuickSort/QuickSort.csproj
@@ -46,6 +46,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BinSearch.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -56,6 +57,7 @@
     <Compile Include="ListItem.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="QuickSort.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
@@ -86,16 +88,19 @@
     <None Include="Resources\боруто.jpg" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Resources\итачи.jpg" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\минато.jpg" />
-  </ItemGroup>
-  <ItemGroup>
     <None Include="Resources\саске.jpg" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\фукаку.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\2.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\итачи.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\минато.jpg" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\наруто.jpg" />
